--- a/sass/components/_question.scss
+++ b/sass/components/_question.scss
@@ -78,7 +78,7 @@
         border-bottom: 1px solid #705A66;
     }
 
-    .accordion-title-phone{
+    .accordion-title-phone {
         width: 231px;
         cursor: pointer;
         font-family: "Montserrat", sans-serif;
@@ -119,4 +119,10 @@
     .accordion {
         margin-left: 4px;
     }
+
+    .question {
+        margin-left: 51px;
+        width: 355px;
+    }
+
 }
