--- a/sass/components/card/_card.scss
+++ b/sass/components/card/_card.scss
@@ -341,10 +341,13 @@ body.show-modal .modal {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    // font-family: "Montserrat", sans-serif;
     font-size: 16px;
     line-height: 22px;
     color: #705A66;
+}
+
+.modal-box-info {
+    display: flex;
 }
 
 .modal-span {
@@ -355,7 +358,11 @@ body.show-modal .modal {
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-left: -165px;
+    margin-left: 20px;
+}
+
+.modal-block {
+    display: flex
 }
 
 .modal-table-title {
@@ -427,7 +434,7 @@ body.show-modal .modal {
         border: none;
         border-radius: 10px;
         background-color: #F5EEE0;
-        width: 500px;
+        width: 355px;
         height: 60px;
         margin-bottom: 24px;
         padding-left: 30px;
@@ -450,15 +457,17 @@ body.show-modal .modal {
     }
 
     .card-flex {
+        flex-direction: column;
         display: flex;
         justify-content: space-between;
     }
 
     .card-box-add-product {
-        width: 488px;
+        margin-left: 29px;
+        width: 355px;
         height: 222px;
         background-color: #F5EEE0;
-        padding-left: 48px;
+        // padding-left: 81px;
         padding-top: 48px;
         border-radius: 10px;
     }
@@ -542,7 +551,7 @@ body.show-modal .modal {
         border: none;
         border-radius: 10px;
         background-color: #F5EEE0;
-        width: 180px;
+        width: 105px;
         height: 60px;
         margin-bottom: 24px;
         padding-left: 30px;
@@ -573,7 +582,7 @@ body.show-modal .modal {
         padding-top: 19px;
         border-radius: 10px;
         border: 1px solid white;
-        width: 500px;
+        width: 355px;
         height: 200px;
         line-height: 24px;
         font-size: 18px;
@@ -582,7 +591,7 @@ body.show-modal .modal {
     .pay {
         margin-left: 30px;
         display: flex;
-        gap: 220px;
+        gap: 77px;
         align-items: center;
     }
 
@@ -594,9 +603,10 @@ body.show-modal .modal {
         border: 1px solid white;
         line-height: 32px;
         font-size: 24px;
-        width: 500px;
+        width: 355px;
         height: 67px;
         margin-top: 61px;
+        margin-bottom: 32px;
     }
 
     .card-pay-text {
@@ -673,13 +683,15 @@ body.show-modal .modal {
     }
 
     .modal-h2 {
+        margin-bottom: 72px;
+        width: 177px;
         font-family: "Montserrat", sans-serif;
-        font-size: 24px;
-        line-height: 32px;
+        font-size: 18px;
+        line-height: 24px;
         color: #705A66;
         font-weight: 500;
-        margin-left: 100px;
-        margin-top: 80px;
+        margin-left: -14px;
+        margin-top: 8px;
     }
 
     .modal-btn {
@@ -705,24 +717,31 @@ body.show-modal .modal {
     }
 
     .modal-table {
+        margin-top: 16px;
         height: 321px;
         width: 319px;
         background-color: #F5EEE0;
-        margin-left: 129px;
+        margin-left: 24px;
         border-radius: 10px;
     }
 
     .modal-box {
+        flex-direction: column;
+        width: 355px;
         display: flex;
         align-items: center;
-        margin-left: 100px;
-        margin-top: 100px;
+        margin-left: -13px;
+        margin-top: -64px;
+    }
+
+    .modal-img {
+        width: 168px;
     }
 
     .modal-information {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 0px;
         // font-family: "Montserrat", sans-serif;
         font-size: 16px;
         line-height: 22px;
@@ -730,11 +749,11 @@ body.show-modal .modal {
     }
 
     .modal-cake {
+        margin: 0px;
         font-family: "Montserrat", sans-serif;
         color: #705A66;
-        font-size: 19px;
-        line-height: 32px;
-        margin-top: -244px;
+        font-size: 16px;
+        line-height: 22px;
         margin-left: 32px;
     }
 
@@ -746,7 +765,7 @@ body.show-modal .modal {
         margin-left: 5px;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 0px;
         // font-family: "Montserrat", sans-serif;
         font-size: 16px;
         line-height: 22px;
@@ -758,10 +777,27 @@ body.show-modal .modal {
     }
 
     .modal-info {
+        flex-direction: column;
+        border: 1px solid red;
+        width: 167px;
         display: flex;
         align-items: center;
         gap: 20px;
-        margin-left: -165px;
+        margin-left: 18px;
+    }
+
+    .modal-information-box {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .modal-block {
+        display: flex;
+    }
+
+    .modal-box-info {
+        width: 355px;
+        display: flex;
     }
 
     .modal-table-title {
