--- a/sass/main.css
+++ b/sass/main.css
@@ -241,11 +241,13 @@ body {
     height: 667px;
   }
   .main-title-phone {
+    width: 355px;
+    margin-left: 31px;
     font-family: Montserrat, sans-serif;
     color: rgb(112, 90, 102);
     text-align: center;
     font-size: 68px;
-    line-height: 110px;
+    line-height: 80px;
     font-weight: 600;
     margin-top: 0px;
     display: block;
@@ -261,14 +263,20 @@ body {
     height: 888px;
   }
   .main-title {
-    width: 315px;
+    margin-left: 42px;
+    width: 355px;
     font-family: "Montserrat", sans-serif;
     color: #705A66;
     text-align: center;
-    font-size: 45px;
+    font-size: 70px;
     line-height: 80px;
     font-weight: 600;
     margin-top: 0px;
+  }
+  .main-title-bestsaller {
+    font-size: 60px;
+    width: 355px;
+    margin-left: 9px;
   }
   .main-title-h1 {
     width: 315px;
@@ -281,10 +289,10 @@ body {
     margin-top: 0px;
   }
   .pudding {
-    width: 107px;
+    width: 141px;
     align-items: center;
     justify-content: center;
-    margin-bottom: 488px;
+    margin-bottom: 517px;
     margin-left: -9px;
   }
   .cakes {
@@ -295,14 +303,14 @@ body {
     visibility: hidden;
   }
   .hardening {
-    width: 105px;
+    width: 128px;
     margin-bottom: 329px;
     margin-left: -17px;
   }
   .circlet {
     margin-bottom: 372px;
     margin-left: -6px;
-    width: 132px;
+    width: 150px;
   }
   .contact {
     width: 25px;
@@ -325,8 +333,16 @@ body {
     color: #705A66;
     font-size: 16px;
     width: 190px;
-    margin-left: -832px;
+    margin-left: -821px;
     margin-top: 105px;
+  }
+  .main-title-question {
+    margin-left: -6px;
+    font-size: 30px;
+  }
+  .main-title-card {
+    font-size: 45px;
+    margin-left: 37px;
   }
   .custom-shape-divider-top-1759830817 {
     margin-top: -1px;
@@ -547,8 +563,8 @@ body {
     list-style: none;
   }
   .galery-img {
-    margin-left: 13px;
-    width: 307px;
+    margin-left: 128px;
+    width: 355px;
     height: auto;
   }
   .thumb {
@@ -585,7 +601,7 @@ body {
     height: 67px;
     border-radius: 25px;
     display: flex;
-    margin-left: 29px;
+    margin-left: 170px;
     width: 276px;
     margin-top: -46px;
     position: relative;
@@ -604,7 +620,7 @@ body {
     align-items: center;
     justify-content: center;
     margin-top: -65px;
-    margin-left: 253px;
+    margin-left: 394px;
   }
 }
 .bestsaller {
@@ -717,15 +733,15 @@ body {
     justify-content: flex-end;
   }
   .bestsaller-img {
-    width: 308px;
+    width: 355px;
   }
   .bestsaller-photo-hiden {
     display: none;
   }
   .bestsaller-arrows {
     z-index: 5;
-    margin-left: 3px;
-    margin-top: 949px;
+    margin-left: 61px;
+    margin-top: 1042px;
     position: absolute;
     display: flex;
     align-items: flex-end;
@@ -734,6 +750,7 @@ body {
     margin-right: 50px;
   }
   .bestsaller-name {
+    margin-left: 33px;
     flex-direction: column;
     display: flex;
     justify-content: space-around;
@@ -779,7 +796,7 @@ body {
     color: #705A66;
     font-size: 24px;
     background-color: #F5EEE0;
-    padding: 20px 20px;
+    padding: 20px 20px 20px 51px;
     border-radius: 10px;
     margin-top: 82px;
     text-decoration: none;
@@ -789,8 +806,8 @@ body {
     background-color: #DDD5C6;
   }
   .bestsaller-button-link {
-    margin-left: 7px;
-    width: 300px;
+    margin-left: 43px;
+    width: 355px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -801,7 +818,7 @@ body {
     text-shadow: 3px 3px 3px 3px #705A66;
   }
   .bestsaller-dots-name {
-    margin-left: 72px;
+    margin-left: 126px;
     display: flex;
     list-style: none;
     gap: 16px;
@@ -933,8 +950,8 @@ body {
     display: none;
   }
   .grann-img-down {
-    margin-left: 3px;
-    width: 306px;
+    margin-left: 36px;
+    width: 355px;
     display: block;
   }
   .grann-text-weight {
@@ -967,6 +984,7 @@ body {
     fill: #F5EEE0;
   }
   .grann-phone {
+    margin-left: 56px;
     display: flex;
     flex-direction: column;
   }
@@ -1057,7 +1075,7 @@ body {
     padding: 0px 106px 0px 106px;
   }
   .delivery-name {
-    margin-left: -480px;
+    margin-left: -422px;
     flex-direction: column;
     display: flex;
     align-items: center;
@@ -1084,7 +1102,7 @@ body {
   .delivery-description {
     font-family: "Montserrat", sans-serif;
     color: #705A66;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 22px;
     text-align: center;
   }
@@ -1186,8 +1204,8 @@ body {
   }
   .about-me-face {
     position: absolute;
-    margin-left: -11px;
-    width: 292px;
+    margin-left: 32px;
+    width: 355px;
     padding-bottom: 300px;
   }
   .about-me-photo {
@@ -1197,13 +1215,14 @@ body {
     margin-left: 30px;
   }
   .about-me-title {
+    width: 355px;
     font-family: "Montserrat", sans-serif;
     color: #705A66;
     line-height: 22px;
     font-size: 16px;
     font-weight: 500;
-    margin-left: 1px;
-    margin-top: 461px;
+    margin-left: 109px;
+    margin-top: 517px;
   }
   .about-me-position {
     display: flex;
@@ -1222,15 +1241,16 @@ body {
     margin-bottom: 0px;
   }
   .about-me-text {
-    width: 311px;
+    width: 355px;
     font-family: "Montserrat", sans-serif;
-    margin-left: 0px;
-    margin-top: 620px;
+    margin-left: 7px;
+    margin-top: 659px;
     color: #705A66;
     line-height: 22px;
     font-size: 16px;
   }
   .about-me-description {
+    margin-left: -38px;
     font-family: "Montserrat", sans-serif;
     color: #705A66;
     line-height: 22px;
@@ -1289,7 +1309,7 @@ body {
   }
   .register-photo-title {
     margin-top: -74px;
-    margin-left: -78px;
+    margin-left: -60px;
     height: 403px;
     width: 500px;
   }
@@ -1350,7 +1370,7 @@ body {
 @media screen and (max-width: 768px) {
   .signup {
     margin-top: 274px;
-    margin-left: 7px;
+    margin-left: 21px;
     position: absolute;
     color: #F5F7F8;
   }
@@ -1360,7 +1380,7 @@ body {
     padding-left: 32px;
     border: 1px solid white;
     border-radius: 10px;
-    width: 265px;
+    width: 355px;
     height: 60px;
     line-height: 24px;
     font-size: 18px;
@@ -1372,7 +1392,7 @@ body {
     padding-top: 19px;
     border-radius: 10px;
     border: 1px solid white;
-    width: 265px;
+    width: 355px;
     height: 180px;
     line-height: 24px;
     font-size: 18px;
@@ -1385,7 +1405,7 @@ body {
     border: 1px solid white;
     line-height: 32px;
     font-size: 24px;
-    width: 301px;
+    width: 390px;
     height: 67px;
   }
   .signup-btn:hover {
@@ -1501,6 +1521,10 @@ body {
   .accordion {
     margin-left: 4px;
   }
+  .question {
+    margin-left: 51px;
+    width: 355px;
+  }
 }
 .instagram-photo {
   padding-bottom: 30px;
@@ -1605,7 +1629,7 @@ body {
   .instagram-btn-all {
     margin-top: 56px;
     margin-left: 7px;
-    width: 300px;
+    width: 355px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -1628,7 +1652,7 @@ body {
   .instagram-btn-arrows {
     display: block;
     z-index: 5;
-    margin-left: -4px;
+    margin-left: 58px;
     margin-top: -197px;
     position: absolute;
     display: flex;
@@ -1644,7 +1668,7 @@ body {
     justify-content: flex-end;
   }
   .instagram-dots-name {
-    margin-left: 72px;
+    margin-left: 131px;
     display: flex;
     list-style: none;
     gap: 16px;
@@ -2171,6 +2195,13 @@ body {
   .catalog-icon {
     align-self: flex-start;
   }
+  .catalog-name {
+    margin-left: -16px;
+    width: 357px;
+    flex-wrap: wrap;
+    display: flex;
+    gap: 20px;
+  }
 }
 .switch {
   display: flex;
@@ -2527,11 +2558,13 @@ body {
     font-size: 16px;
   }
   .product-title-h2 {
+    margin-left: 26px;
+    width: 255px;
     font-weight: 400;
     font-family: "Montserrat", sans-serif;
     color: #705A66;
-    font-size: 42px;
-    line-height: 48px;
+    font-size: 18px;
+    line-height: 24px;
   }
   .product-bg {
     background-color: #F5F7F8;
@@ -2881,6 +2914,10 @@ body.show-modal .modal {
   color: #705A66;
 }
 
+.modal-box-info {
+  display: flex;
+}
+
 .modal-span {
   margin-bottom: 33px;
 }
@@ -2889,7 +2926,11 @@ body.show-modal .modal {
   display: flex;
   align-items: center;
   gap: 20px;
-  margin-left: -165px;
+  margin-left: 20px;
+}
+
+.modal-block {
+  display: flex;
 }
 
 .modal-table-title {
@@ -2956,7 +2997,7 @@ body.show-modal .modal {
     border: none;
     border-radius: 10px;
     background-color: #F5EEE0;
-    width: 500px;
+    width: 355px;
     height: 60px;
     margin-bottom: 24px;
     padding-left: 30px;
@@ -2976,14 +3017,15 @@ body.show-modal .modal {
     align-items: center;
   }
   .card-flex {
+    flex-direction: column;
     display: flex;
     justify-content: space-between;
   }
   .card-box-add-product {
-    width: 488px;
+    margin-left: 29px;
+    width: 355px;
     height: 222px;
     background-color: #F5EEE0;
-    padding-left: 48px;
     padding-top: 48px;
     border-radius: 10px;
   }
@@ -3056,7 +3098,7 @@ body.show-modal .modal {
     border: none;
     border-radius: 10px;
     background-color: #F5EEE0;
-    width: 180px;
+    width: 105px;
     height: 60px;
     margin-bottom: 24px;
     padding-left: 30px;
@@ -3084,7 +3126,7 @@ body.show-modal .modal {
     padding-top: 19px;
     border-radius: 10px;
     border: 1px solid white;
-    width: 500px;
+    width: 355px;
     height: 200px;
     line-height: 24px;
     font-size: 18px;
@@ -3092,7 +3134,7 @@ body.show-modal .modal {
   .pay {
     margin-left: 30px;
     display: flex;
-    gap: 220px;
+    gap: 77px;
     align-items: center;
   }
   .card-btn {
@@ -3103,9 +3145,10 @@ body.show-modal .modal {
     border: 1px solid white;
     line-height: 32px;
     font-size: 24px;
-    width: 500px;
+    width: 355px;
     height: 67px;
     margin-top: 61px;
+    margin-bottom: 32px;
   }
   .card-pay-text {
     font-family: "Montserrat", sans-serif;
@@ -3169,13 +3212,15 @@ body.show-modal .modal {
     /* Повертає до нормального розміру */
   }
   .modal-h2 {
+    margin-bottom: 72px;
+    width: 177px;
     font-family: "Montserrat", sans-serif;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 18px;
+    line-height: 24px;
     color: #705A66;
     font-weight: 500;
-    margin-left: 100px;
-    margin-top: 80px;
+    margin-left: -14px;
+    margin-top: 8px;
   }
   .modal-btn {
     width: 287px;
@@ -3198,32 +3243,38 @@ body.show-modal .modal {
     cursor: pointer;
   }
   .modal-table {
+    margin-top: 16px;
     height: 321px;
     width: 319px;
     background-color: #F5EEE0;
-    margin-left: 129px;
+    margin-left: 24px;
     border-radius: 10px;
   }
   .modal-box {
+    flex-direction: column;
+    width: 355px;
     display: flex;
     align-items: center;
-    margin-left: 100px;
-    margin-top: 100px;
+    margin-left: -13px;
+    margin-top: -64px;
+  }
+  .modal-img {
+    width: 168px;
   }
   .modal-information {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 0px;
     font-size: 16px;
     line-height: 22px;
     color: #705A66;
   }
   .modal-cake {
+    margin: 0px;
     font-family: "Montserrat", sans-serif;
     color: #705A66;
-    font-size: 19px;
-    line-height: 32px;
-    margin-top: -244px;
+    font-size: 16px;
+    line-height: 22px;
     margin-left: 32px;
   }
   .modal-btn-href {
@@ -3233,7 +3284,7 @@ body.show-modal .modal {
     margin-left: 5px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 0px;
     font-size: 16px;
     line-height: 22px;
     color: #705A66;
@@ -3242,10 +3293,24 @@ body.show-modal .modal {
     margin-bottom: 33px;
   }
   .modal-info {
+    flex-direction: column;
+    border: 1px solid red;
+    width: 167px;
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-left: -165px;
+    margin-left: 18px;
+  }
+  .modal-information-box {
+    display: flex;
+    flex-direction: column;
+  }
+  .modal-block {
+    display: flex;
+  }
+  .modal-box-info {
+    width: 355px;
+    display: flex;
   }
   .modal-table-title {
     font-family: "Montserrat", sans-serif;
@@ -3454,30 +3519,36 @@ body.show-modal .modal {
 
 @media screen and (max-width: 768px) {
   .thank-you {
+    width: 355px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
   .thank-you-title {
+    margin-left: 74px;
+    width: 355px;
     font-family: "Montserrat", sans-serif;
     color: #705A66;
     text-align: center;
-    font-size: 70px;
-    line-height: 110px;
+    font-size: 55px;
+    line-height: 80px;
     font-weight: 600;
     margin-top: 0px;
   }
   .thank-you-text {
-    width: 663px;
+    margin-left: 80px;
+    width: 355px;
     font-family: "Montserrat", sans-serif;
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 16px;
+    line-height: 22px;
     color: #705A66;
     text-align: center;
   }
   .thank-you-btn-title {
     display: flex;
+    flex-direction: column;
+    margin-left: 86px;
     gap: 32px;
   }
   .thank-you-btn {
@@ -3485,7 +3556,7 @@ body.show-modal .modal {
     font-size: 24px;
     line-height: 32px;
     color: #705A66;
-    width: 393px;
+    width: 355px;
     height: 67px;
     border-radius: 10px;
     border: none;
@@ -3500,7 +3571,7 @@ body.show-modal .modal {
     font-size: 24px;
     line-height: 32px;
     color: #F5EEE0;
-    width: 393px;
+    width: 355px;
     height: 67px;
     border-radius: 10px;
     border: none;
@@ -3509,5 +3580,8 @@ body.show-modal .modal {
   .thank-you-btn-right:hover {
     background-color: #3a3730;
     cursor: pointer;
+  }
+  .thank-you-img {
+    margin-left: 113px;
   }
 }/*# sourceMappingURL=main.css.map */
