--- a/sass/components/card/_card.scss
+++ b/sass/components/card/_card.scss
@@ -842,3 +842,415 @@ body.show-modal .modal {
         top: 46px;
     }
 }
+
+// планшет
+@media screen and (max-width: 1023px) {
+    .card-shop {
+        font-family: "Montserrat", sans-serif;
+        text-decoration: none;
+        font-size: 16px;
+        line-height: 22px;
+        color: #252525;
+    }
+
+    .card-contact {
+        font-family: "Montserrat", sans-serif;
+        font-weight: 500;
+        color: #705A66;
+        font-size: 24px;
+        line-height: 32px;
+        margin-left: 30px;
+        font-weight: 600;
+    }
+
+    .login__input {
+        font-family: "Montserrat", sans-serif;
+        border: none;
+        border-radius: 10px;
+        background-color: #F5EEE0;
+        width: 500px;
+        height: 60px;
+        margin-bottom: 24px;
+        padding-left: 30px;
+        color: #705A66;
+        font-size: 18px;
+        line-height: 24px;
+        padding-right: 20px;
+    }
+
+    .login__text {
+        font-family: "Montserrat", sans-serif;
+        font-size: 18px;
+        line-height: 24px;
+        margin-left: 30px;
+    }
+
+    .card-sale {
+        display: flex;
+        align-items: center;
+    }
+
+    .card-flex {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .card-box-add-product {
+        width: 488px;
+        height: 222px;
+        background-color: #F5EEE0;
+        padding-left: 48px;
+        padding-top: 48px;
+        border-radius: 10px;
+    }
+
+    .card-order {
+        font-family: "Montserrat", sans-serif;
+        line-height: 24px;
+        font-size: 18px;
+        color: #705A66;
+    }
+
+    .card-order-text {
+        font-family: "Montserrat", sans-serif;
+        line-height: 24px;
+        font-size: 18px;
+        color: #705A66;
+    }
+
+    .card-sale-text {
+        font-family: "Montserrat", sans-serif;
+        line-height: 32px;
+        font-size: 24px;
+        color: #705A66;
+        font-weight: 600;
+        margin-left: 100px;
+    }
+
+    .card-add-product {
+        width: 111px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 165px;
+        margin-top: 56px;
+        font-family: "Montserrat", sans-serif;
+        font-size: 16px;
+        line-height: 22px;
+        color: #705A66;
+        border-bottom: 1px solid black;
+    }
+
+    .card-radio-btn {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        margin-left: 30px;
+
+    }
+
+    .card-radio-text {
+        font-family: "Montserrat", sans-serif;
+        color: #161616;
+        font-size: 18px;
+        line-height: 24px;
+    }
+
+    .card-btn {
+        border-radius: 10px;
+        width: 500px;
+        height: 53px;
+        font-family: "Montserrat", sans-serif;
+        font-size: 18px;
+        line-height: 24px;
+        background-color: #F5EEE0;
+        color: #705A66;
+        padding-left: 30px;
+        margin-left: 30px;
+        border: none;
+    }
+
+    .card-data {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        max-width: 500px;
+        // margin-left: 14px;
+    }
+
+    .card__input {
+        font-family: "Montserrat", sans-serif;
+        border: none;
+        border-radius: 10px;
+        background-color: #F5EEE0;
+        width: 180px;
+        height: 60px;
+        margin-bottom: 24px;
+        padding-left: 30px;
+        color: #705A66;
+        font-size: 18px;
+        line-height: 24px;
+        padding-right: 20px;
+    }
+
+    .card__text {
+        font-family: "Montserrat", sans-serif;
+        font-size: 18px;
+        line-height: 24px;
+        margin-left: 30px;
+    }
+
+    .card-data-flex {
+        display: flex;
+        gap: 16px;
+    }
+
+    .card-textarea {
+        margin-left: 30px;
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        background-color: #F5EEE0;
+        padding-left: 32px;
+        padding-top: 19px;
+        border-radius: 10px;
+        border: 1px solid white;
+        width: 500px;
+        height: 200px;
+        line-height: 24px;
+        font-size: 18px;
+    }
+
+    .pay {
+        margin-left: 30px;
+        display: flex;
+        gap: 220px;
+        align-items: center;
+    }
+
+    .card-btn {
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        background-color: #F5EEE0;
+        border-radius: 10px;
+        border: 1px solid white;
+        line-height: 32px;
+        font-size: 24px;
+        width: 500px;
+        height: 67px;
+        margin-top: 61px;
+    }
+
+    .card-pay-text {
+        font-family: "Montserrat", sans-serif;
+        font-size: 24px;
+        line-height: 32px;
+        color: #705A66;
+        font-weight: 500;
+    }
+
+    .card-pay-sale {
+        font-family: "Montserrat", sans-serif;
+        font-size: 24px;
+        color: #705A66;
+        font-weight: 700;
+    }
+
+    .menu-card {
+        background-color: #F5F7F8;
+    }
+
+    .card-bg {
+        background-color: #F5F7F8;
+        margin-bottom: -121px;
+    }
+
+
+    .backdrop {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: 999;
+
+        /* Приховуємо модалку за замовчуванням */
+        pointer-events: none;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+    }
+
+    .modal {
+        padding: 24px;
+        border-radius: 4px;
+        max-width: 1100px;
+        height: 613px;
+        width: 100%;
+        min-height: 320px;
+        background-color: #F5F7F8;
+        box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+            0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+
+        /* Початковий стан для анімації */
+        transform: scale(1.1);
+        transition: transform 200ms ease-in-out;
+    }
+
+    /* Стилі для відкритого стану (коли на <body> є клас .show-modal) */
+    body.show-modal .backdrop {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: initial;
+        /* Дозволяє кліки */
+    }
+
+    body.show-modal .modal {
+        transform: scale(1);
+        /* Повертає до нормального розміру */
+    }
+
+    .modal-h2 {
+        font-family: "Montserrat", sans-serif;
+        font-size: 24px;
+        line-height: 32px;
+        color: #705A66;
+        font-weight: 500;
+        margin-left: 100px;
+        margin-top: 80px;
+    }
+
+    .modal-btn {
+        width: 287px;
+        height: 67px;
+        font-family: "Montserrat", sans-serif;
+        font-size: 24px;
+        line-height: 32px;
+        color: #F5EEE0;
+        background-color: #705A66;
+        border-radius: 10px;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 16px;
+        margin-top: 11px;
+    }
+
+    .modal-btn:hover {
+        background-color: #413d38;
+        cursor: pointer;
+    }
+
+    .modal-table {
+        height: 321px;
+        width: 319px;
+        background-color: #F5EEE0;
+        margin-left: 129px;
+        border-radius: 10px;
+    }
+
+    .modal-box {
+        display: flex;
+        align-items: center;
+        margin-left: 100px;
+        margin-top: 100px;
+    }
+
+    .modal-information {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        // font-family: "Montserrat", sans-serif;
+        font-size: 16px;
+        line-height: 22px;
+        color: #705A66;
+    }
+
+    .modal-cake {
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        font-size: 19px;
+        line-height: 32px;
+        margin-top: -244px;
+        margin-left: 32px;
+    }
+
+    .modal-btn-href {
+        text-decoration: none;
+    }
+
+    .modal-information-text {
+        margin-left: 5px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        font-size: 16px;
+        line-height: 22px;
+        color: #705A66;
+    }
+
+    .modal-box-info {
+        display: flex;
+    }
+
+    .modal-span {
+        margin-bottom: 33px;
+    }
+
+    .modal-info {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-left: 20px;
+    }
+
+    .modal-block {
+        display: flex
+    }
+
+    .modal-table-title {
+        font-family: "Montserrat", sans-serif;
+        font-size: 18px;
+        line-height: 24px;
+        color: #705A66;
+        margin-left: 16px;
+        margin-top: 32px;
+        font-weight: 400;
+    }
+
+    .modal-table-text {
+        display: flex;
+        align-items: center;
+        gap: 75px;
+        margin-left: 16px;
+        margin-top: 32px;
+        font-family: "Montserrat", sans-serif;
+        color: #705A66;
+        font-size: 16px;
+        line-height: 22px;
+        font-weight: 500;
+    }
+
+    .modal-table-sale {
+        display: flex;
+        align-items: center;
+        gap: 75px;
+        margin-left: 16px;
+        margin-top: 32px;
+        font-family: "Montserrat", sans-serif;
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 600;
+        color: #705A66;
+    }
+
+    .button-close {
+        position: absolute;
+        right: 46px;
+        top: 46px;
+    }
+}
