--- a/sass/components/_heder.scss
+++ b/sass/components/_heder.scss
@@ -21,6 +21,120 @@
     text-decoration: none;
 }
 
+.menu-toggle:hover,
+.menu-toggle:focus {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 87vw;
+    height: 100vh;
+    padding: 32px;
+    background-color: #705A66;
+    z-index: 999;
+    // overflow: hidden;
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+
+    position: absolute;
+    top: 16px;
+    right: 141px;
+    color: #fff;
+}
+
+.mobile-menu {
+    font-family: "Montserrat", sans-serif;
+    line-height: 18px;
+    font-size: 24px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.mobile-menu .link {
+    display: block;
+    padding: 10px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.menu-img-phone {
+    margin-top: 11px;
+    margin-left: -358px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu .link {
+    padding: 10px;
+    color: inherit;
+    text-decoration: none;
+}
+
+.menu .link:hover,
+.menu .link:focus {
+    text-decoration: underline;
+}
+
+.menu-toggle {
+    color: #705A66;
+    position: absolute;
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 226px;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+}
+
+.js-open-menu {
+    right: 40px;
+    margin-top: -60px;
+}
+
+.page-header {
+    height: 119px;
+    background-color: #F5EEE0;
+    margin-bottom: -7px;
+}
+
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 87vw;
+    height: 100vh;
+    padding: 32px;
+    background-color: #705A66;
+    z-index: 999;
+    visibility: hidden;
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.page-header-phone {
+    height: 145px;
+    background-color: #F5EEE0;
+    margin-bottom: -7px;
+    display: none;
+}
 
 // телефон
 
@@ -46,5 +160,214 @@
         color: #705A66;
         text-transform: uppercase;
         text-decoration: none;
+    }
+
+    .phone-img {
+        margin-top: 51px;
+        margin-left: 174px;
+    }
+
+    .icon-phone {
+        margin-bottom: 12px;
+        margin-left: 133px;
+        width: 25px;
+        fill: #705A66;
+    }
+
+    .page-header {
+        height: 119px;
+        background-color: #F5EEE0;
+        margin-bottom: -7px;
+        // box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
+        //     0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+    }
+
+    .menu-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 87vw;
+        height: 100vh;
+        padding: 32px;
+        background-color: #705A66;
+        z-index: 999;
+        visibility: visible;
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
+    }
+
+    .page-header-phone {
+        height: 160px;
+        background-color: #F5EEE0;
+        margin-bottom: -7px;
+        display: block;
+    }
+
+}
+
+@media (max-width: 767px) {
+    .menu {
+        visibility: hidden;
+        margin-top: -161px;
+    }
+}
+
+// планшет
+@media screen and (max-width: 1023px) {
+    .menu {
+        padding-bottom: 26px;
+        margin-top: 0px;
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        justify-content: space-around;
+        align-items: center;
+        padding-top: 40px;
+        background-color: #F5EEE0;
+        // border: 1px solid black;
+        margin-bottom: 0px;
+    }
+
+    .menu-link {
+        font-family: "Montserrat", sans-serif;
+        font-size: 18px;
+        line-height: 24px;
+        color: #705A66;
+        text-transform: uppercase;
+        text-decoration: none;
+    }
+
+    .menu-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 87vw;
+        height: 100vh;
+        padding: 32px;
+        background-color: #705A66;
+        z-index: 999;
+        visibility: hidden;
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
+    }
+
+    .page-header-phone {
+        height: 160px;
+        background-color: #F5EEE0;
+        margin-bottom: -7px;
+        display: block;
+    }
+
+    .phone-img {
+        margin-top: 51px;
+        // margin-left: 174px;
+    }
+
+    .icon-phone {
+        margin-bottom: 12px;
+        margin-left: 133px;
+        width: 25px;
+        fill: #705A66;
+    }
+
+    .menu-toggle:hover,
+    .menu-toggle:focus {
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+
+    .menu-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 87vw;
+        height: 100vh;
+        padding: 32px;
+        background-color: #705A66;
+        z-index: 999;
+        // overflow: hidden;
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
+    }
+
+    .menu-container.is-open {
+        transform: translateX(0);
+    }
+
+    .menu-container .menu-toggle {
+
+        position: absolute;
+        top: 16px;
+        right: 141px;
+        color: #fff;
+    }
+
+    .mobile-menu {
+        font-family: "Montserrat", sans-serif;
+        line-height: 18px;
+        font-size: 24px;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+
+    .mobile-menu .link {
+        display: block;
+        padding: 10px;
+        color: #fff;
+        text-decoration: none;
+    }
+
+    .menu-img-phone {
+        margin-top: 11px;
+        margin-left: -358px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .menu .link {
+        padding: 10px;
+        color: inherit;
+        text-decoration: none;
+    }
+
+    .menu .link:hover,
+    .menu .link:focus {
+        text-decoration: underline;
+    }
+
+    .menu-toggle {
+        color: #705A66;
+        position: absolute;
+        min-height: 40px;
+        min-width: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 226px;
+        padding: 0;
+        background-color: transparent;
+        cursor: pointer;
+        border: none;
+        border-radius: 50%;
+        outline: none;
+    }
+
+    .js-open-menu {
+        right: 40px;
+        margin-top: -60px;
+    }
+
+    .page-h-eader {
+        height: 119px;
+        background-color: #F5EEE0;
+        margin-bottom: -7px;
+        // box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
+        //     0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+    }
+
+    .menu {
+        visibility: hidden;
+        margin-top: -161px;
     }
 }
