виправлення підключення модуля планшету

--- a/sass/components/_about-me.scss
+++ b/sass/components/_about-me.scss
@@ -134,7 +134,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .about-me {
         display: flex;
         align-items: center;
