--- a/sass/components/_bestsaller.scss
+++ b/sass/components/_bestsaller.scss
@@ -222,7 +222,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .bestsaller {
         display: flex;
     }
