--- a/sass/components/_galery.scss
+++ b/sass/components/_galery.scss
@@ -147,7 +147,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .galery-photo {
         list-style: none;
     }
