--- a/sass/components/information/_information.scss
+++ b/sass/components/information/_information.scss
@@ -126,7 +126,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     // .information-controls {
     //     // display: flex;
     //     // gap: 8px;
