--- a/sass/components/product/thankYou/_thank.scss
+++ b/sass/components/product/thankYou/_thank.scss
@@ -144,7 +144,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .thank-you {
         display: flex;
         flex-direction: column;
