--- a/sass/components/_basic.scss
+++ b/sass/components/_basic.scss
@@ -30,7 +30,7 @@ body {
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     body {
         padding: 0px;
         margin: 0px;
