--- a/sass/components/_delivery.scss
+++ b/sass/components/_delivery.scss
@@ -158,7 +158,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .delivery {
         position: relative;
         background-color: #F5EEE0;
