--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -206,7 +206,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .footer {
         display: flex;
         align-items: center;
