--- a/sass/components/_heder.scss
+++ b/sass/components/_heder.scss
@@ -213,7 +213,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .menu {
         padding-bottom: 26px;
         margin-top: 0px;
