--- a/sass/components/_instagram.scss
+++ b/sass/components/_instagram.scss
@@ -163,7 +163,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px){
     .instagram-photo {
         padding-bottom: 30px;
         padding-right: 30px;
