--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -219,12 +219,13 @@
 
 
     .main-description-social {
+        z-index: 5;
         font-family: "Montserrat", sans-serif;
         color: #705A66;
         font-size: 16px;
         width: 190px;
-        margin-left: -821px;
-        margin-top: 105px;
+        margin-left: -822px;
+        margin-top: -212px;
     }
 
     .main-title-question {
@@ -265,7 +266,7 @@
 
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .main {
         background-color: #F5EEE0;
         border-bottom: 5px solid rgb(255, 0, 0);
