--- a/sass/components/_question.scss
+++ b/sass/components/_question.scss
@@ -128,7 +128,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px){
     .question-text {
         font-family: "Montserrat", sans-serif;
         font-size: 24px;
