--- a/sass/components/_svg.scss
+++ b/sass/components/_svg.scss
@@ -46,7 +46,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .icon-list {
         padding: 0;
         margin: 0;
