--- a/sass/components/product/_napoleon.scss
+++ b/sass/components/product/_napoleon.scss
@@ -416,7 +416,7 @@
 }
 
 // планшет
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
     .switch {
         display: flex;
         list-style: none;
