--- a/sass/main.css
+++ b/sass/main.css
@@ -25,7 +25,7 @@ body {
     margin-bottom: 120px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   body {
     padding: 0px;
     margin: 0px;
@@ -235,7 +235,7 @@ body {
     margin-top: -161px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .menu {
     padding-bottom: 26px;
     margin-top: 0px;
@@ -409,7 +409,7 @@ body {
     fill: #705A66;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .icon-list {
     padding: 0;
     margin: 0;
@@ -621,12 +621,13 @@ body {
     visibility: hidden;
   }
   .main-description-social {
+    z-index: 5;
     font-family: "Montserrat", sans-serif;
     color: #705A66;
     font-size: 16px;
     width: 190px;
-    margin-left: -821px;
-    margin-top: 105px;
+    margin-left: -822px;
+    margin-top: -212px;
   }
   .main-title-question {
     margin-left: -6px;
@@ -657,7 +658,7 @@ body {
     fill: #F5EEE0;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .main {
     background-color: #F5EEE0;
     border-bottom: 5px solid rgb(255, 0, 0);
@@ -881,7 +882,7 @@ body {
     margin-left: 394px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .galery-photo {
     list-style: none;
   }
@@ -1145,7 +1146,7 @@ body {
     margin-top: 31px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .bestsaller {
     display: flex;
   }
@@ -1394,7 +1395,7 @@ body {
     flex-direction: column;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .grann {
     position: relative;
     background-color: #F5EEE0;
@@ -1453,6 +1454,8 @@ body {
     overflow: hidden;
   }
   .grann-img-down {
+    margin-left: 190px;
+    width: 400px;
     display: block;
   }
   .grann-custom-shape-divider-top-1759830817 {
@@ -1618,7 +1621,7 @@ body {
     fill: #F5EEE0;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .delivery {
     position: relative;
     background-color: #F5EEE0;
@@ -1809,7 +1812,7 @@ body {
     font-size: 14px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .about-me {
     display: flex;
     align-items: center;
@@ -1922,7 +1925,7 @@ body {
     width: 500px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .register {
     background-image: url("../../img/register/bg-section-register.png");
     background-repeat: no-repeat;
@@ -2048,7 +2051,7 @@ body {
     cursor: pointer;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .signup {
     margin-top: 29px;
     color: #F5F7F8;
@@ -2209,7 +2212,7 @@ body {
     width: 355px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .question-text {
     font-family: "Montserrat", sans-serif;
     font-size: 24px;
@@ -2401,7 +2404,7 @@ body {
     margin-top: 31px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .instagram-photo {
     padding-bottom: 30px;
     padding-right: 30px;
@@ -2644,7 +2647,7 @@ body {
     display: flex;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .footer {
     display: flex;
     align-items: center;
@@ -3073,7 +3076,7 @@ body {
     gap: 20px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .catalog-btn {
     font-family: "Montserrat", sans-serif;
     color: #705A66;
@@ -3601,7 +3604,7 @@ body {
     text-decoration: none;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .switch {
     display: flex;
     list-style: none;
@@ -4543,7 +4546,7 @@ body.show-modal .modal {
     top: 46px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .card-shop {
     font-family: "Montserrat", sans-serif;
     text-decoration: none;
@@ -5002,7 +5005,7 @@ body.show-modal .modal {
     border-bottom: 3px solid #705A66;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .information-button {
     font-family: "Montserrat", sans-serif;
     font-size: 24px;
@@ -5181,7 +5184,7 @@ body.show-modal .modal {
     margin-left: 113px;
   }
 }
-@media screen and (max-width: 1023px) {
+@media (min-width: 769px) and (max-width: 1023px) {
   .thank-you {
     display: flex;
     flex-direction: column;
